welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: type mismatch;
 found   : Unit
 required: Int
  for (cpt1<-0 to nums.length-1) {
           ^